syntax = "proto3";

package proto;

option go_package = "github.com/sibelly/upvote-exchanges/pb";

service ExchangesService { 
  rpc Upvote(VoteRequest) returns (VoteResponse) {}
  rpc ListExchanges(Empty) returns (stream Exchange) {}
  rpc ReadExchange(ReadReq) returns (ReadRes) {}
  rpc NotifyUpvote(Empty) returns(stream NotifyMsg) {}
}

message Exchange {
  string id = 1;
  string exchange_id = 2;
  string website = 3;
  string name = 4;
  int32 upvotes = 5;
  int32 downvotes = 6;
}

message VoteRequest {
  string exchange_id = 1;
}

message VoteResponse {
  string exchange_id = 1;
  string name = 2;
  string website = 3;
  int32 votes = 4;
}

message Empty {}


message ReadReq {
  string exchange_id = 1;
}

message ReadRes {
  Exchange exchange = 1;
}

message NotifyMsg {
  string message = 1;
}